objects/Star_System__c.object
<CustomObject>
    <fields>
        <fullName>Galaxy__c</fullName>
        <label>Galaxy</label>
        <referenceTo>Galaxies__c</referenceTo>
        <relationshipLabel>Star Systems</relationshipLabel>
        <relationshipName>Star_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Planets__c</fullName>
        <label># of Planets</label>
        <summaryForeignKey>Planet__c.Star_System__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Star System</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Solar System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Star Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>